<resources>
    <string name="app_name">LazyFit</string>
    <string name="button_search">Search</string>
    <string name="button_account">Account</string>
    <string name="button_calculator">Calculator</string>
    <string name="button_recipes">Recipes</string>
    <string name="better_relationship"><b>Want a better relationship with food?</b></string>
    <string name="help_you"><b>We will help you!</b></string>
    <string name="start">Start</string>
    <string name="about_us"><u>About us</u></string>
    <string name="logo"><u>Logo</u></string>
    <string name="app_text">In our application you can find new recipes to make from products that are in your fridge.\n\nThat sounds very simple, right?\n\nAlso you will be able to add  recipes to your "favorites" list.\n\nOne more thing - now you can also calculate your calorie intake.\n\nIf you are struggling with calorie counting and healthy eating, then this is the right place for you!\n\nJoin us Now!\nLazyFit Creators</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="birth_date">Birth Date</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="continue_">Continue</string>
    <string name="ingredients"><b>Ingredients:</b></string>
    <string name="instructions"><b>Instructions:</b></string>
    <string name="calorie_goal">Calorie goal</string>
    <string-array name="gender">
        <item>Female</item>
        <item>Male</item>
        <item>Prefer not to disclose</item>
    </string-array>
    <string name="tab_breakfast">Breakfast</string>
    <string name="tab_lunch">Lunch</string>
    <string name="tab_dinner">Dinner</string>
    <string name="tab_snacks">Snacks</string>
    <string name="tab_favorites">Favorites</string>
    <string name="tab_products">Products</string>
    <string name="image">Image</string>
    <string name="dialog_title">All products</string>
    <string name="dialog_save">Save</string>
    <string name="edit_products">Edit products</string>
    <string name="products_owned">Products you have:</string>

    <string name="calorie_counter_name">Your calories:</string>
    <string name="btn_addCalories">Add calories</string>
    <string name="btn_removeCalories">Remove calories</string>
    <string name="nutrients_Protein">Protein/meat</string>
    <string name="nutrients_Grains">Grains</string>
    <string name="nutrients_Vegetables">Vegetables</string>
    <string name="nutrients_Fruits">Fruits</string>
    <string name="nutrients_Sugar">Sugar</string>
    <string name="nutrients_Dairy">Dairy products</string>
    <string name="nutrients_Fat">Fat</string>
    <string name="start_calories">0</string>
    <string name="grams_input">g</string>
    <string name="kcal_calories">Kcal</string>

</resources>